force-app/main/default/objects/ContentVersion/fields/File_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>File_Image_URL__c</fullName>
    <formula>LEFT( $Api.Enterprise_Server_URL_100, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 ) + 4)&amp; &quot;sfc/servlet.shepherd/version/download/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Image URL</label>
    <type>Text</type>
</CustomField>