force-app/main/default/objects/ContentVersion/fields/IsProfilePhoto__c.field-meta.xml
<CustomField>
    <fullName>IsProfilePhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProfilePhoto</label>
    <type>Checkbox</type>
</CustomField>